# yaam

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  unix.sh  win.ps1
src/: custom_errors.c  custom_errors.h  errors.c  errors.h  yaam.c  yaam.h
tests/: assume_test.cpp  assume_unix.sh  bench.c  macro_test.cpp  main.c  test.c  test.cpp  unix.sh  win.ps1
